--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -4,9 +4,9 @@
     padding: 0;
 }
 
-.filter-section {
+/* .filter-section {
     background-color: aqua;
-}
+} */
 
 .delete-button {
     background-color: red;
@@ -22,4 +22,18 @@ table {
 td, th {
     border: 1px solid;
     border-collapse: collapse
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+#selected-roles {
+    margin: 5px auto;
+}
+
+#selected-roles label {
+    margin: auto 5px;
+    padding: 2px 2px;
+    border: 1px solid;
 }
