--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,4 +1,35 @@
+img{
+    width: 50px;
+    float: left;
+}
+#main-header{
+    height: auto;
+    font-size: 22px ;
+}
+.container h1{
+    text-align: center;
+    width: 90%;
+    
+}
+#navbar{
+    background-color: #333;
+}
+#navbar ul{
+    list-style: none;
+    text-align: center;
+}
+#navbar li{
+    display: inline;
+}
+#navbar a{
+    color: white;
+    text-decoration: none;
+    text-size-adjust: 90%;
+    font-size: 18px;
+    padding-right: 15px;
+}
 * {
+    text-align: center;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -36,4 +67,9 @@ td, th {
     margin: auto 5px;
     padding: 2px 2px;
     border: 1px solid;
+}
+
+#filter-results{
+    margin-left: auto;
+    margin-right: auto;
 }
