--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,76 +1,132 @@
-img{
-    width: 50px;
-    float: left;
-}
-#main-header{
-    background-color: orangered;
-    height: auto;
-    font-size: 22px ;
-}
-.container h1{
-    text-align: center;
-    width: 90%;
-    
-}
-#navbar{
-    background-color: #333;
-}
-#navbar ul{
-    list-style: none;
-    text-align: center;
-}
-#navbar li{
-    display: inline;
-}
-#navbar a{
-    color: white;
-    text-decoration: none;
-    text-size-adjust: 90%;
-    font-size: 18px;
-    padding-right: 15px;
-}
-* {
-    text-align: center;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+body {
+  background-color: beige;
 }
 
-/* .filter-section {
-    background-color: aqua;
-} */
+img {
+  width: 100px;
+  float: left;
+}
+#main-header {
+  background-color: green;
+  padding: 0px;
+  height: auto;
+  font-size: 22px;
+}
+.container {
+  text-align: center;
+  width: 80%;
+}
+
+#navbar {
+  background-color: #333;
+  padding: 3px;
+}
+
+#navbar ul {
+  text-align: center;
+}
+#navbar li {
+  padding: 10px;
+  display: inline;
+}
+#navbar a {
+  text-decoration: none;
+  text-size-adjust: 90%;
+  font-size: 18px;
+  padding-right: 10px;
+}
+
+.footer a:visited {
+  color: #333;
+}
+.footer a:hover {
+  color: white;
+}
+
+* {
+  box-sizing: border-box;
+  margin: auto;
+}
+
+.filter-section {
+  text-align: center;
+}
 
 .delete-button {
-    background-color: red;
-    color: white;
+  background-color: red;
+  color: white;
 }
 
 table {
-    border: 3px solid;
-    width: 50%;
-    border-collapse: collapse
+  border: 3px solid;
+  width: 50%;
+  border-collapse: collapse;
 }
 
-td, th {
-    border: 1px solid;
-    border-collapse: collapse
+td,
+th {
+  border: 1px solid;
+  border-collapse: collapse;
 }
 
 .clickable {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #selected-roles {
-    margin: 5px auto;
+  margin: 5px auto;
 }
 
 #selected-roles label {
-    margin: auto 5px;
-    padding: 2px 2px;
-    border: 1px solid;
+  margin: auto 5px;
+  padding: 2px 2px;
+  border: 1px solid;
 }
 
-#filter-results{
-    margin-left: auto;
-    margin-right: auto;
+#filter-results {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer {
+  margin: 5px;
+  padding: 15px;
+  background-color: green;
+}
+.registerbutton {
+  padding: 4px;
+  background-color: gold;
+  border-radius: 10px;
+  border: 15px;
+  text-decoration: none;
+}
+
+.main-filters {
+  text-align: center;
+}
+
+.copy {
+  text-align: center;
+}
+
+.button {
+  background-color: #333;
+  color: #fff;
+  padding: 4px 15px;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.button:hover {
+  background-color: gold;
+  color: #333;
+}
+
+#showcase {
+  background-image: url(images/bgimage.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+  width: 100%;
 }
